# arducap

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  pipeline.rs  reader.rs  transformers.rs
