[package]
name = "arducap"
version = "0.2.0"
edition = "2021"
description = "A CLI tool to convert ArduPilot Dataflash logs (.bin) to Foxglove MCAP files."
license = "MIT"
repository = "https://github.com/swarmis-us/arducap"
keywords = ["ardupilot", "dataflash", "foxglove", "mcap", "drone"]
categories = ["command-line-utilities", "science::robotics"]
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
binrw = "0.15.0"
mcap = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
approx = "0.5"
